--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -1,4 +1,23 @@
 <header class="header">
-	<div class="header__container">
-	</div>
+    <div class="header__container">
+        <a href="#" class="header__logo">
+            <img src="@img/logo.svg" alt="GPT-3 Logo" />
+        </a>
+        <div class="header__menu menu">
+            <nav class="menu__body">
+                <ul class="menu__list">
+                    <li class="menu__item"><a href="" class="menu__link">Home</a></li>
+                    <li class="menu__item"><a href="" class="menu__link">What is GPT?</a></li>
+                    <li class="menu__item"><a href="" class="menu__link">Open AI</a></li>
+                    <li class="menu__item"><a href="" class="menu__link">Case Studies</a></li>
+                    <li class="menu__item"><a href="" class="menu__link">Library</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div data-da=".menu__body, 767.98, last" class="header__buttons buttons-header">
+            <button type="button" class="buttons-header__sign-in">Sign in</button>
+            <button type="button" class="buttons-header__sign-up button">Sign up</button>
+        </div>
+        <button type="button" class="header__icon icon-menu"><span></span></button>
+    </div>
 </header>
