companies v1/ start v1.1/ header v1.2

--- a/src/home.html
+++ b/src/home.html
@@ -55,6 +55,26 @@
                         </div>
                     </div>
                 </section>
+
+                <div class="page__companies companies">
+                    <div class="companies__container">
+                        <div class="companies__item">
+                            <img src="@img/companies/google.svg" alt="Google Logo" />
+                        </div>
+                        <div class="companies__item">
+                            <img src="@img/companies/slack.svg" alt="Slack Logo" />
+                        </div>
+                        <div class="companies__item">
+                            <img src="@img/companies/atlassian.svg" alt="Atlassian Logo" />
+                        </div>
+                        <div class="companies__item">
+                            <img src="@img/companies/dropbox.svg" alt="Dropbox Logo" />
+                        </div>
+                        <div class="companies__item">
+                            <img src="@img/companies/shopify.svg" alt="Shopify Logo" />
+                        </div>
+                    </div>
+                </div>
             </main>
             @@include('html/_footer.htm',{})
         </div>
