--- a/src/home.html
+++ b/src/home.html
@@ -75,6 +75,60 @@
                         </div>
                     </div>
                 </div>
+
+                <section class="page__what what">
+                    <div class="what__container">
+                        <div class="what__content">
+                            <article class="what__item item item_top">
+                                <div class="item__header">
+                                    <span class="item__line"></span>
+                                    <h3 class="item__title">What is GPT-3</h3>
+                                </div>
+                                <p class="item__text">
+                                    We so opinion friends me message as delight. Whole front do of plate heard oh ought. His
+                                    defective nor convinced residence own. Connection has put impossible own apartments
+                                    boisterous. At jointure ladyship an insisted so humanity he. Friendly bachelor entrance to on
+                                    by.
+                                </p>
+                            </article>
+                            <div class="what__feature feature">
+                                <h2 class="feature__title">The possibilities are beyond your imagination</h2>
+                                <a href="" class="feature__link">Explore The Library</a>
+                            </div>
+                            <div class="what__body">
+                                <article class="what__item item">
+                                    <div class="item__header">
+                                        <span class="item__line"></span>
+                                        <h3 class="item__title">Chatbots</h3>
+                                    </div>
+                                    <p class="item__text">
+                                        We so opinion friends me message as delight. Whole front do of plate heard oh ought.
+                                    </p>
+                                </article>
+                                <article class="what__item item">
+                                    <div class="item__header">
+                                        <span class="item__line"></span>
+                                        <h3 class="item__title">Knowledgebase</h3>
+                                    </div>
+                                    <p class="item__text">
+                                        At jointure ladyship an insisted so humanity he. Friendly bachelor entrance to on by. As
+                                        put impossible own apartments b
+                                    </p>
+                                </article>
+                                <article class="what__item item">
+                                    <div class="item__header">
+                                        <span class="item__line"></span>
+                                        <h3 class="item__title">Education</h3>
+                                    </div>
+                                    <p class="item__text">
+                                        At jointure ladyship an insisted so humanity he. Friendly bachelor entrance to on by. As
+                                        put impossible own apartments b
+                                    </p>
+                                </article>
+                            </div>
+                        </div>
+                    </div>
+                </section>
             </main>
             @@include('html/_footer.htm',{})
         </div>
