--- a/src/home.html
+++ b/src/home.html
@@ -129,6 +129,59 @@
                         </div>
                     </div>
                 </section>
+
+                <section class="page__future future">
+                    <div class="future__container">
+                        <div class="future__feature feature">
+                            <h2 class="feature__title">
+                                The Future is Now and You Just Need To Realize It. Step into Future Today & Make it Happen.
+                            </h2>
+                            <a href="#" class="feature__link">Request Early Access to Get Started</a>
+                        </div>
+                        <div data-spollers="479.98" class="future__items">
+                            <article class="future__item item item_future">
+                                <div data-spoller class="item__header">
+                                    <span class="item__line"></span>
+                                    <h3 class="item__title">Improving end distrusts instantly</h3>
+                                </div>
+                                <p class="item__text">
+                                    From they fine john he give of rich he. They age and draw mrs like. Improving end distrusts
+                                    may instantly was household applauded.
+                                </p>
+                            </article>
+                            <article class="future__item item item_future">
+                                <div data-spoller class="item__header">
+                                    <span class="item__line"></span>
+                                    <h3 class="item__title">Become the tended active</h3>
+                                </div>
+                                <p class="item__text">
+                                    Considered sympathize ten uncommonly occasional assistance sufficient not. Letter of on become
+                                    he tended active enable to.
+                                </p>
+                            </article>
+                            <article class="future__item item item_future">
+                                <div data-spoller class="item__header">
+                                    <span class="item__line"></span>
+                                    <h3 class="item__title">Message or am nothing</h3>
+                                </div>
+                                <p class="item__text">
+                                    Led ask possible mistress relation elegance eat likewise debating. By message or am nothing
+                                    amongst chiefly address.
+                                </p>
+                            </article>
+                            <article class="future__item item item_future">
+                                <div data-spoller class="item__header">
+                                    <span class="item__line"></span>
+                                    <h3 class="item__title">Really boy law county</h3>
+                                </div>
+                                <p class="item__text">
+                                    Really boy law county she unable her sister. Feet you off its like like six. Among sex are
+                                    leave law built now. In built table in an rapid blush.
+                                </p>
+                            </article>
+                        </div>
+                    </div>
+                </section>
             </main>
             @@include('html/_footer.htm',{})
         </div>
