--- a/src/home.html
+++ b/src/home.html
@@ -92,7 +92,7 @@
                                 </p>
                             </article>
                             <div class="what__feature feature">
-                                <h2 class="feature__title">The possibilities are beyond your imagination</h2>
+                                <h2 class="feature__title title">The possibilities are beyond your imagination</h2>
                                 <a href="" class="feature__link">Explore The Library</a>
                             </div>
                             <div class="what__body">
@@ -133,7 +133,7 @@
                 <section class="page__future future">
                     <div class="future__container">
                         <div class="future__feature feature">
-                            <h2 class="feature__title">
+                            <h2 class="feature__title title">
                                 The Future is Now and You Just Need To Realize It. Step into Future Today & Make it Happen.
                             </h2>
                             <a href="#" class="feature__link">Request Early Access to Get Started</a>
@@ -179,6 +179,28 @@
                                     leave law built now. In built table in an rapid blush.
                                 </p>
                             </article>
+                        </div>
+                    </div>
+                </section>
+
+                <section class="page__possibilities posibilities">
+                    <div class="posibilities__container">
+                        <div class="posibilities__wrapper">
+                            <div class="posibilities__image">
+                                <img src="@img/feature.png" alt="Human in VR" />
+                            </div>
+                            <div class="posibilities__content">
+                                <a href="#" class="posibilities__link posibilities__link_blue"
+                                    >Request Early Access to Get Started</a
+                                >
+                                <h2 class="posibilities__title title">The possibilities are beyond your imagination</h2>
+                                <p class="posibilities__text">
+                                    Yet bed any for travelling assistance indulgence unpleasing. Not thoughts all exercise
+                                    blessing. Indulgence way everything joy alteration boisterous the attachment. Party we years
+                                    to order allow asked of.
+                                </p>
+                                <a href="#" class="posibilities__link">Request Early Access to Get Started</a>
+                            </div>
                         </div>
                     </div>
                 </section>
