--- a/src/home.html
+++ b/src/home.html
@@ -204,6 +204,18 @@
                         </div>
                     </div>
                 </section>
+
+                <section class="page__register register">
+                    <div class="register__container">
+                        <div class="register__wrapper">
+                            <div class="register__header">
+                                <div class="register__label">Request Early Access to Get Started</div>
+                                <h2 class="register__title">Register today & start exploring the endless possiblities.</h2>
+                            </div>
+                            <a href="#" class="register__button">Get Started</a>
+                        </div>
+                    </div>
+                </section>
             </main>
             @@include('html/_footer.htm',{})
         </div>
