--- a/src/home.html
+++ b/src/home.html
@@ -216,6 +216,84 @@
                         </div>
                     </div>
                 </section>
+
+                <section class="page__blog blog">
+                    <div class="blog__container">
+                        <h2 class="blog__title">A lot is happening, We are blogging about it.</h2>
+                        <div class="blog__body">
+                            <article class="blog__item item-blog item-blog_1">
+                                <a href="#" class="item-blog__image-ibg">
+                                    <img src="@img/blog/1.jpg" alt="AI" />
+                                </a>
+                                <div class="item-blog__body">
+                                    <div class="item-blog__date">Sep 26, 2021</div>
+                                    <h4>
+                                        <a href="#" class="item-blog__link">
+                                            GPT-3 and Open AI is the future. Let us exlore how it is?
+                                        </a>
+                                    </h4>
+                                    <span><a href="#" class="item-blog__button">Read Full Article</a></span>
+                                </div>
+                            </article>
+                            <article class="blog__item item-blog item-blog_2">
+                                <a href="#" class="item-blog__image-ibg">
+                                    <img src="@img/blog/2.jpg" alt="AI" />
+                                </a>
+                                <div class="item-blog__body">
+                                    <div class="item-blog__date">Sep 26, 2021</div>
+                                    <h4>
+                                        <a href="#" class="item-blog__link">
+                                            GPT-3 and Open AI is the future. Let us exlore how it is?
+                                        </a>
+                                    </h4>
+                                    <span><a href="#" class="item-blog__button">Read Full Article</a></span>
+                                </div>
+                            </article>
+                            <article class="blog__item item-blog item-blog_3">
+                                <a href="#" class="item-blog__image-ibg">
+                                    <img src="@img/blog/3.jpg" alt="AI" />
+                                </a>
+                                <div class="item-blog__body">
+                                    <div class="item-blog__date">Sep 26, 2021</div>
+                                    <h4>
+                                        <a href="#" class="item-blog__link">
+                                            GPT-3 and Open AI is the future. Let us exlore how it is?
+                                        </a>
+                                    </h4>
+                                    <span><a href="#" class="item-blog__button">Read Full Article</a></span>
+                                </div>
+                            </article>
+                            <article class="blog__item item-blog item-blog_4">
+                                <a href="#" class="item-blog__image-ibg">
+                                    <img src="@img/blog/4.jpg" alt="AI" />
+                                </a>
+                                <div class="item-blog__body">
+                                    <div class="item-blog__date">Sep 26, 2021</div>
+                                    <h4>
+                                        <a href="#" class="item-blog__link">
+                                            GPT-3 and Open AI is the future. Let us exlore how it is?
+                                        </a>
+                                    </h4>
+                                    <span><a href="#" class="item-blog__button">Read Full Article</a></span>
+                                </div>
+                            </article>
+                            <article class="blog__item item-blog item-blog_5">
+                                <a href="#" class="item-blog__image-ibg">
+                                    <img src="@img/blog/5.jpg" alt="AI" />
+                                </a>
+                                <div class="item-blog__body">
+                                    <div class="item-blog__date">Sep 26, 2021</div>
+                                    <h4>
+                                        <a href="#" class="item-blog__link">
+                                            GPT-3 and Open AI is the future. Let us exlore how it is?
+                                        </a>
+                                    </h4>
+                                    <span><a href="#" class="item-blog__button">Read Full Article</a></span>
+                                </div>
+                            </article>
+                        </div>
+                    </div>
+                </section>
             </main>
             @@include('html/_footer.htm',{})
         </div>
