--- a/src/home.html
+++ b/src/home.html
@@ -294,6 +294,13 @@
                         </div>
                     </div>
                 </section>
+
+                <section class="page__request request">
+                    <div class="request__container">
+                        <h2 class="request__title">Do you want to step in to the future before others</h2>
+                        <a href="#" class="request__button">Request Early Access</a>
+                    </div>
+                </section>
             </main>
             @@include('html/_footer.htm',{})
         </div>
