--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -1,4 +1,58 @@
 <footer class="footer">
-	<div class="footer__container">
-	</div>
+    <div class="footer__container">
+        <div data-spollers="600" class="footer__body">
+            <div class="footer__info">
+                <a href="#" class="footer__logo">
+                    <img src="@img/logo.svg" alt="Logo GPT-3" />
+                </a>
+                <div class="footer__address footer-text">Crechterwoord K12 182 DK Alknjkcb, All Rights Reserved</div>
+            </div>
+            <nav class="footer__item">
+                <div data-spoller class="footer__label">Links</div>
+                <ul class="footer__list">
+                    <li class="footer__list-item">
+                        <a href="" class="footer__link-item footer-text">Overons</a>
+                    </li>
+                    <li class="footer__list-item">
+                        <a href="" class="footer__link-item footer-text">Social Media</a>
+                    </li>
+                    <li class="footer__list-item">
+                        <a href="" class="footer__link-item footer-text">Counters</a>
+                    </li>
+                    <li class="footer__list-item">
+                        <a href="" class="footer__link-item footer-text">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+            <nav class="footer__item">
+                <div data-spoller class="footer__label">Company</div>
+                <ul class="footer__list">
+                    <li class="footer__list-item">
+                        <a href="" class="footer__link-item footer-text">Terms & Conditions</a>
+                    </li>
+                    <li class="footer__list-item">
+                        <a href="" class="footer__link-item footer-text">Privacy Policy</a>
+                    </li>
+                    <li class="footer__list-item">
+                        <a href="" class="footer__link-item footer-text">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+            <nav class="footer__item">
+                <div data-spoller class="footer__label">Get in touch</div>
+                <ul class="footer__list">
+                    <li class="footer__list-item">
+                        <a href="" class="footer__link-item footer-text">Crechterwoord K12 182 DK Alknjkcb</a>
+                    </li>
+                    <li class="footer__list-item">
+                        <a href="tel:085132567" class="footer__link-item footer-text">085-132567</a>
+                    </li>
+                    <li class="footer__list-item">
+                        <a href="mailto:info@payme.net" class="footer__link-item footer-text">info@payme.net</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+        <div class="footer__copy footer-text">© 2021 GPT-3. All rights reserved.</div>
+    </div>
 </footer>
