--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -6,11 +6,19 @@
         <div class="header__menu menu">
             <nav class="menu__body">
                 <ul class="menu__list">
-                    <li class="menu__item"><a href="" class="menu__link">Home</a></li>
-                    <li class="menu__item"><a href="" class="menu__link">What is GPT?</a></li>
-                    <li class="menu__item"><a href="" class="menu__link">Open AI</a></li>
-                    <li class="menu__item"><a href="" class="menu__link">Case Studies</a></li>
-                    <li class="menu__item"><a href="" class="menu__link">Library</a></li>
+                    <li class="menu__item"><a data-goto=".page__start" href="" class="menu__link">Home</a></li>
+                    <li class="menu__item">
+                        <a data-goto=".page__what" data-goto-header href="" class="menu__link">What is GPT?</a>
+                    </li>
+                    <li class="menu__item">
+                        <a data-goto=".page__future" data-goto-header href="" class="menu__link">Open AI</a>
+                    </li>
+                    <li class="menu__item">
+                        <a data-goto=".page__possibilities" data-goto-header href="" class="menu__link">Case Studies</a>
+                    </li>
+                    <li class="menu__item">
+                        <a data-goto=".page__blog" data-goto-header href="" class="menu__link">Library</a>
+                    </li>
                 </ul>
             </nav>
         </div>
